fixed header on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,6 +257,9 @@ i {
   .navbar .nav-item .nav-link {
     font-size: 13px;
   }
+  #header {
+    background-position: initial;
+  }
   .jumbotronTitle {
       font-size: 20px;
   }
